--- a/mods.html
+++ b/mods.html
@@ -198,18 +198,18 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          69    100.00%
-				updated:             56     81.16%
-				kind-of updated:     5       7.25%
-				kind-of outdated:    1       1.45%
-				outdated:            6       8.70%
-				abandoned:           1       1.45%
+				total mods:          71    100.00%
+				updated:             58     81.69%
+				kind-of updated:     5       7.04%
+				kind-of outdated:    1       1.41%
+				outdated:            6       8.45%
+				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:81%"></div>
+			<div class="updated" style="width:82%"></div>
 			<div class="kindof-updated" style="width:7%"></div>
-			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="kindof-outdated" style="width:1%"></div>
 			<div class="outdated" style="width:9%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -278,13 +278,13 @@
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
-		<div class="mod" id="lambdynamiclights">
+		<div class="mod" id="sodium-dynamic-lights">
 			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/yBW8D80W/d4f5c3ff8df7caf024178b04eca6d69f95979cfe_96.webp" />
+				<img src="https://cdn.modrinth.com/data/PxQSWIcD/a5ab5515213391934e18baaf487c87e4b24ebfa3_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/lambdynamiclights" target="_blank">LambDynamicLights</a>
+					<a href="https://modrinth.com/mod/sodium-dynamic-lights" target="_blank">Sodium Dynamic Lights</a>
 				</h3>
 				<p>Dynamic lighting.</p>
 			</div>
@@ -450,6 +450,20 @@
 		</div>
 		<h2>Other Performance Enhancements</h2>
 		<p>The following mods offer performance improvements beyond those provided by OptiFine.</p>
+		<div class="mod" id="badoptimizations">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/9mtu0sUO/dca186a8a57d45ad06e88de6cfc45d4cc4c6a0ba.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/badoptimizations" target="_blank">BadOptimizations</a>
+				</h3>
+				<p>Optimization mod that focuses on things other than rendering.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
 		<div class="mod" id="distant-horizons">
 			<div class="mod-icon">
 				<img src="https://cdn.modrinth.com/data/uCdwusMi/icon.png" />
@@ -488,6 +502,20 @@
 					<a href="https://modrinth.com/mod/entityculling" target="_blank">Entity Culling</a>
 				</h3>
 				<p>Skips rendering entities that aren't in view.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
+			</div>
+		</div>
+		<div class="mod" id="fast-ip-ping">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/9mtu0sUO/dca186a8a57d45ad06e88de6cfc45d4cc4c6a0ba.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/fast-ip-ping" target="_blank">Fast IP Ping</a>
+				</h3>
+				<p>Skips reversed DNS lookup for literal IP addresses.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
@@ -1115,7 +1143,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, and <a href="#smooth-swapping">Smooth Swapping</a>.</p>
+				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.4</span>
