--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             58     81.69%
-				kind-of updated:     5       7.04%
+				updated:             60     84.51%
+				kind-of updated:     3       4.23%
 				kind-of outdated:    1       1.41%
 				outdated:            6       8.45%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:82%"></div>
-			<div class="kindof-updated" style="width:7%"></div>
+			<div class="updated" style="width:84.5%"></div>
+			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:1%"></div>
-			<div class="outdated" style="width:9%"></div>
+			<div class="outdated" style="width:8.5%"></div>
 			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -731,10 +731,9 @@
 					<a href="https://github.com/Rektroth/DripSounds-Fabric/releases/tag/1.21" target="_blank">Drip Sounds</a>
 				</h3>
 				<p>Adds sounds for drip particles landing.</p>
-				<p><i>(<a href="https://modrinth.com/mod/dripsounds" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
@@ -975,7 +974,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
