--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             60     84.51%
-				kind-of updated:     3       4.23%
+				updated:             61     85.92%
+				kind-of updated:     2       2.82%
 				kind-of outdated:    1       1.41%
 				outdated:            6       8.45%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:84.5%"></div>
-			<div class="kindof-updated" style="width:4%"></div>
-			<div class="kindof-outdated" style="width:1%"></div>
-			<div class="outdated" style="width:8.5%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="updated" style="width:86%"></div>
+			<div class="kindof-updated" style="width:3%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="outdated" style="width:8%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -904,7 +904,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
