--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             61     85.92%
+				updated:             62     87.32%
 				kind-of updated:     2       2.82%
 				kind-of outdated:    1       1.41%
-				outdated:            6       8.45%
+				outdated:            5       7.04%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:86%"></div>
+			<div class="updated" style="width:87%"></div>
 			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:8%"></div>
+			<div class="outdated" style="width:7%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -485,13 +485,12 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/Rektroth/EnhancedBlockEntities/releases/tag/0.10.2%2B1.21.2" target="_blank">Enhanced Block Entities</a>
+					<a href="https://modrinth.com/mod/ebe" target="_blank">Enhanced Block Entities</a>
 				</h3>
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
-				<p><i>(<a href="https://modrinth.com/mod/ebe" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.2</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
