--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             62     87.32%
+				updated:             63     88.73%
 				kind-of updated:     2       2.82%
-				kind-of outdated:    1       1.41%
+				kind-of outdated:    0       0.00%
 				outdated:            5       7.04%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:87%"></div>
+			<div class="updated" style="width:89%"></div>
 			<div class="kindof-updated" style="width:3%"></div>
-			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:7%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -1003,7 +1003,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
