--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             63     88.73%
-				kind-of updated:     2       2.82%
+				updated:             64     90.14%
+				kind-of updated:     1       1.41%
 				kind-of outdated:    0       0.00%
 				outdated:            5       7.04%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:89%"></div>
-			<div class="kindof-updated" style="width:3%"></div>
+			<div class="updated" style="width:90%"></div>
+			<div class="kindof-updated" style="width:1.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:7%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -853,13 +853,12 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/Rektroth/Tiny-Item-Animations/releases/tag/1.2.1-1.21.3" target="_blank">Tiny Item Animations</a>
+					<a href="https://modrinth.com/mod/tiny-item-animations" target="_blank">Tiny Item Animations</a>
 				</h3>
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
-				<p><i>(<a href="https://modrinth.com/mod/tiny-item-animations" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="visuality">
