masa mods on modrinth again

--- a/mods.html
+++ b/mods.html
@@ -921,11 +921,11 @@
 		</div>
 		<div class="mod" id="litematica">
 			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/thumbnails/181/712/64/64/636802492918868562.jpeg" />
+				<img src="https://cdn.modrinth.com/data/bEpr0Arc/25b5529d7a3b030ac136a6ce879d8ed2a1aa4a8d.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/sakura-ryoko/litematica/releases/" target="_blank">Litematica</a>
+					<a href="https://modrinth.com/mod/litematica" target="_blank">Litematica</a>
 				</h3>
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
@@ -935,11 +935,11 @@
 		</div>
 		<div class="mod" id="minihud">
 			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/thumbnails/213/409/64/64/636992403483369946.png" />
+				<img src="https://cdn.modrinth.com/data/UMxybHE8/4adf057a251f694983af139a06839e33bcd7a419.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/sakura-ryoko/minihud/releases/" target="_blank">MiniHUD</a>
+					<a href="https://modrinth.com/mod/minihud" target="_blank">MiniHUD</a>
 				</h3>
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
@@ -1167,7 +1167,7 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/sakura-ryoko/malilib/releases/" target="_blank">MaLiLib</a>
+					<a href="https://modrinth.com/mod/malilib" target="_blank">MaLiLib</a>
 				</h3>
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
