--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             64     90.14%
+				updated:             66     92.96%
 				kind-of updated:     1       1.41%
 				kind-of outdated:    0       0.00%
-				outdated:            5       7.04%
+				outdated:            3       4.23%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:90%"></div>
+			<div class="updated" style="width:93%"></div>
 			<div class="kindof-updated" style="width:1.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:7%"></div>
+			<div class="outdated" style="width:4%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -467,7 +467,7 @@
 		</div>
 		<div class="mod" id="distant-horizons">
 			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/uCdwusMi/icon.png" />
+				<img src="https://cdn.modrinth.com/data/uCdwusMi/e716cda9bb568b5373ff76e363fb4c6d7278fba6_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
@@ -476,7 +476,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -611,12 +611,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/nvidium" target="_blank">Nvidium</a>
+					<a href="https://github.com/drouarb/nvidium/releases" target="_blank">Nvidium</a>
 				</h3>
 				<p>Uses the nvidia rendering engine.</p>
+				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
