--- a/mods.html
+++ b/mods.html
@@ -398,7 +398,7 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/fabricskyboxes" target="_blank">FabricSkyBoxes</a>
+					<a href="https://modrinth.com/mod/nuit" target="_blank">FabricSkyBoxes</a>
 				</h3>
 				<p>Allows for custom skyboxes in resource packs.</p>
 				<p>Required by <a href="#fabricskyboxes-interop">FabricSkyBoxes Interop</a>.</p>
@@ -413,7 +413,7 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/fabricskyboxes-interop" target="_blank">FabricSkyBoxes Interop</a>
+					<a href="https://modrinth.com/mod/nuit-interop" target="_blank">FabricSkyBoxes Interop</a>
 				</h3>
 				<p>Implements the OptiFine custom skyboxes format within <a href="#fabricskyboxes">FabricSkyBoxes</a>.</p>
 			</div>
