--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             23     32.39%
+				updated:             35     49.30%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            47     66.20%
-				abandoned:           1       1.41%
+				outdated:            36     50.70%
+				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:32%"></div>
+			<div class="updated" style="width:49%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:66%"></div>
-			<div class="abandoned" style="width:2%"></div>
+			<div class="outdated" style="width:51%"></div>
+			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -248,7 +248,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -262,7 +262,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -504,7 +504,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="fast-ip-ping">
@@ -518,7 +518,7 @@
 				<p>Skips reversed DNS lookup for literal IP addresses.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -691,7 +691,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -719,7 +719,7 @@
 				<p>Spices up the boring vanilla blur effect.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
@@ -747,7 +747,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -817,7 +817,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="sounds">
@@ -845,7 +845,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -859,7 +859,7 @@
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="visuality">
@@ -887,7 +887,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -1059,7 +1059,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="abandoned"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="dont-clear-chat-history">
