sounds requires yacl

--- a/mods.html
+++ b/mods.html
@@ -1226,7 +1226,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/yacl" target="_blank">YetAnotherConfigLib</a>
 				</h3>
-				<p>Required by <a href="#debugify">Debugify</a> and <a href="#zoomify">Zoomify</a>.</p>
+				<p>Required by <a href="#debugify">Debugify</a>, <a href="#sounds">Sounds</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.5</span>
