--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             43     60.56%
+				updated:             44     61.97%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            28     39.44%
+				outdated:            27     38.03%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:61%"></div>
+			<div class="updated" style="width:62%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:39%"></div>
+			<div class="outdated" style="width:38%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -476,7 +476,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
