--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             45     63.38%
+				updated:             47     66.20%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            26     36.62%
+				outdated:            24     33.80%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:63%"></div>
+			<div class="updated" style="width:66%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:37%"></div>
+			<div class="outdated" style="width:34%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -633,7 +633,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="model-gap-fix">
@@ -761,7 +761,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="particular">
