--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             47     66.20%
+				updated:             48     67.61%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            24     33.80%
+				outdated:            23     32.39%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:66%"></div>
+			<div class="updated" style="width:68%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:34%"></div>
+			<div class="outdated" style="width:32%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -290,7 +290,7 @@
 				<p>Dynamic lighting.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="more-culling">
