--- a/mods.html
+++ b/mods.html
@@ -203,14 +203,14 @@
 				updated:             48     67.61%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            23     32.39%
-				abandoned:           0       0.00%
+				outdated:            22     30.99%
+				abandoned:           1       1.41%
 			-->
 			<div class="updated" style="width:68%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:32%"></div>
-			<div class="abandoned" style="width:0%"></div>
+			<div class="outdated" style="width:31%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -661,7 +661,7 @@
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="abandoned"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
