--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             48     67.61%
+				updated:             49     69.01%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            22     30.99%
+				outdated:            21     29.58%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:68%"></div>
+			<div class="updated" style="width:69%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:31%"></div>
+			<div class="outdated" style="width:30%"></div>
 			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -675,7 +675,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
