--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             49     69.01%
+				updated:             50     70.42%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            21     29.58%
+				outdated:            20     28.17%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:69%"></div>
+			<div class="updated" style="width:70.5%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:30%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="outdated" style="width:28%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -614,10 +614,10 @@
 					<a href="https://github.com/drouarb/nvidium/releases" target="_blank">Nvidium</a>
 				</h3>
 				<p>Uses the nvidia rendering engine.</p>
-				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.</i></p>
+				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
