--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             50     70.42%
+				updated:             55     77.46%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            20     28.17%
+				outdated:            15     21.13%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:70.5%"></div>
+			<div class="updated" style="width:77.5%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:28%"></div>
+			<div class="outdated" style="width:21%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -733,7 +733,7 @@
 				<p>Adds sounds for drip particles landing.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
@@ -926,12 +926,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/litematica" target="_blank">Litematica</a>
+					<a href="https://github.com/sakura-ryoko/litematica/releases" target="_blank">Litematica</a>
 				</h3>
 				<p>Provides a holographic overlay of saved builds.</p>
+				<p><i>(<a href="https://modrinth.com/mod/litematica" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -940,12 +941,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/minihud" target="_blank">MiniHUD</a>
+					<a href="https://github.com/sakura-ryoko/minihud/releases" target="_blank">MiniHUD</a>
 				</h3>
 				<p>Provides on-screen info on various in-world properties.</p>
+				<p><i>(<a href="https://modrinth.com/mod/minihud" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -1168,12 +1170,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/malilib" target="_blank">MaLiLib</a>
+					<a href="https://github.com/sakura-ryoko/malilib/releases" target="_blank">MaLiLib</a>
 				</h3>
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
+				<p><i>(<a href="https://modrinth.com/mod/malilib" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="mru">
@@ -1201,7 +1204,7 @@
 				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="tcdcommons-api">
