--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             55     77.46%
-				kind-of updated:     0       0.00%
-				kind-of outdated:    0       0.00%
-				outdated:            15     21.13%
+				updated:             56     78.87%
+				kind-of updated:     2       2.82%
+				kind-of outdated:    1       1.41%
+				outdated:            11     15.49%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:77.5%"></div>
-			<div class="kindof-updated" style="width:0%"></div>
-			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:21%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="updated" style="width:79%"></div>
+			<div class="kindof-updated" style="width:3%"></div>
+			<div class="kindof-outdated" style="width:1%"></div>
+			<div class="outdated" style="width:15.5%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -327,13 +327,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/Rektroth/Animatica/releases/tag/0.6.2%2B1.21.4" target="_blank">Animatica</a>
+					<a href="https://github.com/Riflusso/Animatica/actions/runs/14282796975" target="_blank">Animatica</a>
 				</h3>
 				<p>Implements the OptiFine animated texture format.</p>
 				<p><i>(<a href="https://modrinth.com/mod/animatica" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="cit-resewn">
@@ -705,7 +705,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="blur-plus">
@@ -1005,7 +1005,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
@@ -1075,7 +1075,7 @@
 				<p>Doesn't clear the messages sent/received when disconnecting and/or relogging from a server or singleplayer.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.4</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
