--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             56     78.87%
+				updated:             57     80.28%
 				kind-of updated:     2       2.82%
-				kind-of outdated:    1       1.41%
+				kind-of outdated:    0       0.00%
 				outdated:            11     15.49%
 				abandoned:           1       1.41%
 			-->
 			<div class="updated" style="width:79%"></div>
 			<div class="kindof-updated" style="width:3%"></div>
-			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:15%"></div>
+			<div class="kindof-outdated" style="width:0%"></div>
+			<div class="outdated" style="width:15.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -1005,7 +1005,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
