--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             57     80.28%
+				updated:             58     81.69%
 				kind-of updated:     2       2.82%
 				kind-of outdated:    0       0.00%
-				outdated:            11     15.49%
+				outdated:            10     14.08%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:80%"></div>
+			<div class="updated" style="width:81.5%"></div>
 			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:15.5%"></div>
+			<div class="outdated" style="width:14%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -361,7 +361,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
