--- a/mods.html
+++ b/mods.html
@@ -926,10 +926,9 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/sakura-ryoko/litematica/releases" target="_blank">Litematica</a>
+					<a href="https://modrinth.com/mod/litematica" target="_blank">Litematica</a>
 				</h3>
 				<p>Provides a holographic overlay of saved builds.</p>
-				<p><i>(<a href="https://modrinth.com/mod/litematica" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.5</span>
@@ -941,10 +940,9 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/sakura-ryoko/minihud/releases" target="_blank">MiniHUD</a>
+					<a href="https://modrinth.com/mod/minihud" target="_blank">MiniHUD</a>
 				</h3>
 				<p>Provides on-screen info on various in-world properties.</p>
-				<p><i>(<a href="https://modrinth.com/mod/minihud" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.5</span>
@@ -1170,10 +1168,9 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/sakura-ryoko/malilib/releases" target="_blank">MaLiLib</a>
+					<a href="https://modrinth.com/mod/malilib" target="_blank">MaLiLib</a>
 				</h3>
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
-				<p><i>(<a href="https://modrinth.com/mod/malilib" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.5</span>
