--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          71    100.00%
-				updated:             58     81.69%
+				updated:             60     84.51%
 				kind-of updated:     2       2.82%
 				kind-of outdated:    0       0.00%
-				outdated:            10     14.08%
+				outdated:            8      11.27%
 				abandoned:           1       1.41%
 			-->
-			<div class="updated" style="width:81.5%"></div>
+			<div class="updated" style="width:85%"></div>
 			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:14%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="outdated" style="width:11%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -446,7 +446,7 @@
 				<p>Implements the OptiFine custom colors format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<h2>Other Performance Enhancements</h2>
@@ -602,7 +602,7 @@
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
