--- a/mods.html
+++ b/mods.html
@@ -200,10 +200,10 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             60     85.71%
+				updated:             61     85.71%
 				kind-of updated:     2       2.86%
 				kind-of outdated:    0       0.00%
-				outdated:            7      10.00%
+				outdated:            6      10.00%
 				abandoned:           1       1.43%
 			-->
 			<div class="updated" style="width:86%"></div>
@@ -784,12 +784,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Smooth Swapping</a>
+					<a href="https://github.com/Riflusso/Smooth-Swapping/releases" target="_blank">Smooth Swapping</a>
 				</h3>
 				<p>Adds a smooth animation when moving items between containers.</p>
+				<p><i>(<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.3</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
