--- a/mods.html
+++ b/mods.html
@@ -200,14 +200,14 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             61     87.14%
-				kind-of updated:     2       2.86%
+				updated:             62     88.57%
+				kind-of updated:     1       1.43%
 				kind-of outdated:    0       0.00%
 				outdated:            6       8.57%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:87%"></div>
-			<div class="kindof-updated" style="width:3%"></div>
+			<div class="updated" style="width:89%"></div>
+			<div class="kindof-updated" style="width:1%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:9%"></div>
 			<div class="abandoned" style="width:1%"></div>
@@ -691,7 +691,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="blur-plus">
