--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             37     52.86%
+				updated:             38     54.29%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            32     45.71%
+				outdated:            31     44.29%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:52%"></div>
+			<div class="updated" style="width:54%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:46%"></div>
+			<div class="outdated" style="width:44%"></div>
 			<div class="abandoned" style="width:2%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -327,13 +327,12 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/Riflusso/Animatica/actions/runs/14282796975" target="_blank">Animatica</a>
+					<a href="https://modrinth.com/mod/animatica" target="_blank">Animatica</a>
 				</h3>
 				<p>Implements the OptiFine animated texture format.</p>
-				<p><i>(<a href="https://modrinth.com/mod/animatica" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="outdated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="continuity">
