--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             38     54.29%
+				updated:             41     58.57%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            31     44.29%
+				outdated:            28     40.00%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:54%"></div>
+			<div class="updated" style="width:59%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:44%"></div>
-			<div class="abandoned" style="width:2%"></div>
+			<div class="outdated" style="width:40%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -917,7 +917,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -931,7 +931,7 @@
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -1159,7 +1159,7 @@
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="mru">
