--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             41     58.57%
+				updated:             43     61.43%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            28     40.00%
+				outdated:            26     37.14%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:59%"></div>
+			<div class="updated" style="width:61.5%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:40%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="outdated" style="width:37%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -873,7 +873,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -1045,7 +1045,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="dont-clear-chat-history">
