--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             43     61.43%
+				updated:             44     62.86%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            26     37.14%
+				outdated:            25     35.71%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:61.5%"></div>
+			<div class="updated" style="width:63%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:37%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="outdated" style="width:36%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -660,7 +660,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
