--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             44     62.86%
+				updated:             46     65.71%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            25     35.71%
+				outdated:            23     32.86%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:63%"></div>
+			<div class="updated" style="width:66%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:36%"></div>
+			<div class="outdated" style="width:33%"></div>
 			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -732,7 +732,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -1003,7 +1003,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="better-statistics-screen">
