--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             49     70.00%
+				updated:             51     72.86%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            20     28.57%
+				outdated:            18     25.71%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:70%"></div>
+			<div class="updated" style="width:73%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:29%"></div>
+			<div class="outdated" style="width:26%"></div>
 			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -889,7 +889,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
@@ -1101,7 +1101,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
