--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             20     28.99%
-				kind-of updated:     30     43.48%
+				updated:             21     30.43%
+				kind-of updated:     29     42.03%
 				kind-of outdated:    3       4.35%
 				outdated:            15     21.74%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:29%"></div>
-			<div class="kindof-updated" style="width:44%"></div>
+			<div class="updated" style="width:30%"></div>
+			<div class="kindof-updated" style="width:42%"></div>
 			<div class="kindof-outdated" style="width:4"></div>
 			<div class="outdated" style="width:22%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="abandoned" style="width:2%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -989,7 +989,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7-rc2</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
