--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             21     30.43%
-				kind-of updated:     29     42.03%
+				updated:             22     31.88%
+				kind-of updated:     28     40.58%
 				kind-of outdated:    3       4.35%
 				outdated:            15     21.74%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:30%"></div>
-			<div class="kindof-updated" style="width:42%"></div>
-			<div class="kindof-outdated" style="width:4"></div>
+			<div class="updated" style="width:32%"></div>
+			<div class="kindof-updated" style="width:41%"></div>
+			<div class="kindof-outdated" style="width:4%"></div>
 			<div class="outdated" style="width:22%"></div>
-			<div class="abandoned" style="width:2%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -503,7 +503,7 @@
 				<p>Skips reversed DNS lookup for literal IP addresses.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
