--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             22     31.88%
-				kind-of updated:     28     40.58%
-				kind-of outdated:    3       4.35%
-				outdated:            15     21.74%
+				updated:             30     43.48%
+				kind-of updated:     22     31.88%
+				kind-of outdated:    1       1.45%
+				outdated:            14     20.29%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:32%"></div>
-			<div class="kindof-updated" style="width:41%"></div>
-			<div class="kindof-outdated" style="width:4%"></div>
-			<div class="outdated" style="width:22%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="updated" style="width:44%"></div>
+			<div class="kindof-updated" style="width:32%"></div>
+			<div class="kindof-outdated" style="width:2%"></div>
+			<div class="outdated" style="width:20%"></div>
+			<div class="abandoned" style="width:2%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -304,7 +304,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -559,7 +559,7 @@
 				<p>Makes switching between languages instant.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="lithium">
@@ -817,7 +817,7 @@
 				<p>Adds and enhances sound effects throughout out the world, UI, and chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="status-effect-bars">
@@ -1017,7 +1017,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1031,7 +1031,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-patches">
@@ -1087,7 +1087,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -1173,7 +1173,7 @@
 				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="tcdcommons-api">
@@ -1187,7 +1187,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
