--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             30     43.48%
-				kind-of updated:     22     31.88%
-				kind-of outdated:    1       1.45%
-				outdated:            14     20.29%
+				updated:             34     49.28%
+				kind-of updated:     19     27.54%
+				kind-of outdated:    2       2.90%
+				outdated:            13     18.84%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:44%"></div>
-			<div class="kindof-updated" style="width:32%"></div>
-			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:20%"></div>
-			<div class="abandoned" style="width:2%"></div>
+			<div class="updated" style="width:49%"></div>
+			<div class="kindof-updated" style="width:28%"></div>
+			<div class="kindof-outdated" style="width:3%"></div>
+			<div class="outdated" style="width:19%"></div>
+			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -248,7 +248,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -262,7 +262,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -1103,7 +1103,7 @@
 				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1159,7 +1159,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
