--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             34     49.28%
+				updated:             33     47.83%
 				kind-of updated:     19     27.54%
 				kind-of outdated:    2       2.90%
-				outdated:            13     18.84%
+				outdated:            14     20.29%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:49%"></div>
+			<div class="updated" style="width:48%"></div>
 			<div class="kindof-updated" style="width:28%"></div>
 			<div class="kindof-outdated" style="width:3%"></div>
-			<div class="outdated" style="width:19%"></div>
+			<div class="outdated" style="width:20%"></div>
 			<div class="abandoned" style="width:1%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -817,7 +817,7 @@
 				<p>Adds and enhances sound effects throughout out the world, UI, and chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.7</span>
+				<span class="outdated"><span class="circle"></span> 1.21.5</span>
 			</div>
 		</div>
 		<div class="mod" id="status-effect-bars">
