--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             34     49.28%
-				kind-of updated:     19     27.54%
+				updated:             40     57.97%
+				kind-of updated:     14     20.29%
 				kind-of outdated:    1       1.45%
-				outdated:            14     20.29%
+				outdated:            13     18.84%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:49%"></div>
-			<div class="kindof-updated" style="width:28%"></div>
+			<div class="updated" style="width:58%"></div>
+			<div class="kindof-updated" style="width:20%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:20%"></div>
+			<div class="outdated" style="width:19%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -360,7 +360,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -374,7 +374,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="nuit">
@@ -746,7 +746,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="particular">
@@ -831,7 +831,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -859,7 +859,7 @@
 				<p>Little visual improvements by adding a bunch of new particles.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -973,7 +973,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
